# FirstSkiaApp

./: .gitignore  .gitmodules  BUILD.gn  ClassDiagram.cd  FirstSkiaApp.sln  FirstSkiaApp.vcxproj  FirstSkiaApp.vcxproj.filters  README.md  run.cmd
Skia/Debug/: skia.dll.lib
Skia/Release/: skia.dll.lib
resources/: BUILD.gn
resources/shaders/: BlackAndWhite.sksl  Circular.sksl  Clamp.sksl  Conical.sksl  FXAA.sksl  Fill.sksl  Fill_AA.sksl  Fill_MSAA.sksl  Linear.sksl  Mirror.sksl  Rectangular.sksl  Repeat.sksl  Swirl.sksl
src/: AppWindow.cpp  Application.cpp  LayerCollection.cpp  PlatformApplication_win.cpp  PlatformWindow_win.cpp  init.cpp  main.cpp
src/Backgounds/: BaseBackgound.cpp  OpenGLBackgound.cpp  RasterBackgound.cpp
src/Controls/: BaseControl.cpp  BaseValueControl.cpp  Button.cpp  ControlsContainer.cpp  Focus.cpp  Label.cpp  Slider.cpp
src/Layers/: BlackAndWhiteLayer.cpp  CustomGradient.cpp  ExampleLayer.cpp  ExampleLayer1.cpp  ExampleLayer10.cpp  ExampleLayer11.cpp  ExampleLayer12.cpp  ExampleLayer13.cpp  ExampleLayer14.cpp  ExampleLayer15.cpp  ExampleLayer2 - Copy.cpp  ExampleLayer2.cpp  ExampleLayer3.cpp  ExampleLayer4.cpp  ExampleLayer5.cpp  ExampleLayer6.cpp  ExampleLayer7.cpp  ExampleLayer8.cpp  ExampleLayer9.cpp  FillLayer.cpp  LinearGradient.cpp  LinearGradient4P.cpp  LinearGradient4P_v2.cpp  RandomShapes.cpp  SimpleLinearGradient.cpp  SwirlLayer.cpp  ThankYouLayer.cpp
src/Layers/Utils/: FPS.cpp  Histogram.cpp  RandomShapes.cpp  Utils.cpp
src/Utils/: DrawUtils.cpp  FPS.cpp  Shaders.cpp  ThemeUtils.cpp  Utils.cpp
src/include/: AppWindow.h  Application.h  ILayer.h  LayerCollection.h  Types.h
src/include/Backgounds/: BaseBackgound.h  OpenGLBackgound.h  RasterBackgound.h
src/include/Controls/: BaseControl.h  BaseValueControl.h  Button.h  ControlsContainer.h  Focus.h  Label.h  Slider.h
src/include/Interfaces/: IApplication.h  IBackground.h  IControl.h  IControlCaption.h  IControlValue.h  ILayer.h  IPlatformWindow.h
src/include/Layers/: BaseLayer.h  BlackAndWhiteLayer.h  CustomGradient.h  ExampleLayer.h  ExampleLayer0.h  ExampleLayer1.h  ExampleLayer10.h  ExampleLayer11.h  ExampleLayer12.h  ExampleLayer13.h  ExampleLayer14.h  ExampleLayer15.h  ExampleLayer2.h  ExampleLayer3.h  ExampleLayer4.h  ExampleLayer5.h  ExampleLayer6.h  ExampleLayer7.h  ExampleLayer8.h  ExampleLayer9.h  FillLayer.h  LinearGradient.h  LinearGradient4P.h  LinearGradient4P_v2.h  RandomShapes.h  SimpleLinearGradient.h  SwirlLayer.h  ThankYouLayer.h
src/include/Layers/Utils/: FPS.h  Histogram.h  RandomShapes.h  Utils.h
src/include/Utils/: DrawUtils.h  FPS.h  IterableCollection.h  Shaders.h  ThemeUtils.h  Utils.h
